--- a/src/books/BookItem.css
+++ b/src/books/BookItem.css
@@ -12,14 +12,16 @@ a {
   margin: 1rem;
   display: flex;
   justify-content: center;
-  
+  border-radius: 20px;
+  box-shadow: 0px 0px 5px 0px black;
 }
 
 .BookItem h2 {
   text-align: center;
   text-decoration: none;
   color: black;
-  font-size: 1.5rem;
+  font-size: 1rem;
+  font-weight: 700;
   margin: 1rem;
 }
 
