--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,3 +1,33 @@
 .Home {
-  
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Home h2 {
+  font-size: 2rem;
+  margin: 1rem;
+}
+
+.Home a {
+  color: red;
+  font-size: 3rem;
+  background-color: black;
+  width: fit-content;
+  padding: 0.6rem;
+  margin: 1rem;
+  border-radius: 10px;
+  transition: all ease-in-out 0.1s;
+}
+
+.Home a:hover {
+  color: blue;
+  font-size: 3rem;
+  background-color: greenyellow;
+  width: fit-content;
+  padding: 0.6rem;
+  margin: 1rem;
+  border-radius: 10px;
+  border: 2px solid black;
 }
