--- a/src/books/BookItem.css
+++ b/src/books/BookItem.css
@@ -14,6 +14,12 @@ a {
   justify-content: center;
   border-radius: 20px;
   box-shadow: 0px 0px 5px 0px black;
+  transition: all ease-in-out 0.1s;
+}
+
+.BookItem:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 0px 10px 1px black;
 }
 
 .BookItem h2 {
