--- a/src/app/Header.css
+++ b/src/app/Header.css
@@ -1,12 +1,13 @@
 .Header {
   padding: 20px;
-  border-bottom: 1px solid lightgray;
+  border-bottom: 2px solid rgb(133, 133, 133);
   display: flex;
- 
 }
 
 .Header h1 {
   width: 30%;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 .Header .navLinks {
@@ -22,7 +23,3 @@
   cursor: pointer;
 }
 
-h1 {
-  font-size: 2rem;
-  font-weight: bold;
-}
